Improve font sizes of Login form

--- a/src/components/FormInputError.module.scss
+++ b/src/components/FormInputError.module.scss
@@ -19,9 +19,6 @@
 
 .errorMessage {
   color: colors.$error;
-  height: 1rem;
-}
-
-.errorPlaceholder {
-  height: 1rem;
+  font-size: 0.75rem;
+  margin-bottom: 4px;
 }
