--- a/src/Form.module.scss
+++ b/src/Form.module.scss
@@ -4,11 +4,13 @@
   color: white;
   background-color: colors.$bronto;
   border: 2px solid colors.$bronto;
+  font-size: 1rem;
 }
 
 .alternativeActionButton.alternativeActionButton {
   color: black;
   background: none;
+  font-size: 0.875rem;
 }
 
 .dangerActionButton {
@@ -28,6 +30,7 @@ select {
 
   &::placeholder {
     color: rgb(166, 166, 166);
+    font-size: 0.875rem;
   }
 }
 
