--- a/src/Login.module.scss
+++ b/src/Login.module.scss
@@ -8,9 +8,13 @@
 .title {
   text-align: center;
   font-weight: bold;
+  font-size: 1rem;
+  margin-bottom: 8px;
 }
+
 .subtitle {
   text-align: center;
+  font-size: 0.875rem;
 }
 
 .formContainer {
@@ -22,7 +26,6 @@
     flex-direction: column;
     align-items: center;
     width: 100%;
-    gap: 0.5rem;
   }
 
   .formElement {
