--- a/src/components/Steps.module.scss
+++ b/src/components/Steps.module.scss
@@ -1,13 +1,66 @@
+@use '../colors';
+
 .isHidden {
   display: none;
 }
 
-.stepButton {
-  &.isActive {
-    background-color: green;
-  }
-  &.isError {
-    border-color: red;
+$step-button-horizontal-padding: 0.5rem;
+$step-button-vertical-padding: 0.2rem;
+$step-button-border-width: 2px;
+$step-button-height: 1rem;
+$step-button-connect-height: 4px;
+$step-button-horizontal-gap: 1rem;
+$step-button-line-height: 1.5rem;
+
+.navigation {
+  position: relative;
+  margin: 0 1rem;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 0.2rem $step-button-horizontal-gap;
+  .stepButton {
+    line-height: $step-button-line-height;
+    white-space: nowrap;
+    padding: $step-button-vertical-padding $step-button-horizontal-padding;
+    border: $step-button-border-width solid colors.$bronto-light;
+    background-color: colors.$bronto-light;
+    color: colors.$bronto;
+    border-radius: 2rem;
+    &:hover {
+      background-color: colors.$bronto;
+      color: white;
+    }
+    &.isActive {
+      background-color: colors.$bronto;
+      color: white;
+      &.isError {
+        border-color: colors.$error;
+      }
+    }
+    &.isError {
+      border-color: colors.$error;
+      /*&:not(:last-child):after {
+        //background-color: colors.$error-light;
+      }*/
+    }
+
+    // this connects step buttons with a line
+    &:not(:last-child):after {
+      z-index: -1;
+      content: '';
+      position: absolute;
+      background: colors.$bronto-light;
+      width: calc($step-button-horizontal-gap + 2px);
+      height: $step-button-connect-height;
+      transform: translateX(
+          calc(
+            $step-button-border-width + $step-button-horizontal-padding - 1px
+          )
+        )
+        translateY(
+          calc($step-button-line-height / 2 - $step-button-connect-height / 2)
+        );
+    }
   }
 }
 
