--- a/src/Form.module.scss
+++ b/src/Form.module.scss
@@ -18,11 +18,16 @@
   color: black;
 }
 
+input:not([type]),
 input[type='text'],
 input[type='password'],
 input[type='number'],
 input[type='date'],
+input[type='email'],
+input[type='tel'],
+input[type='url'],
 input[type='datetime-local'],
+textarea,
 select {
   border: 2px solid #ebeff4;
   border-radius: 10px;
