--- a/src/components/FormLayout.module.scss
+++ b/src/components/FormLayout.module.scss
@@ -40,3 +40,22 @@
   color: red;
   margin-left: 0.2rem;
 }
+
+.infoBox {
+  background-color: #ebeff4;
+  padding: 0.5rem 1rem;
+}
+
+// this must be a direct child of a Form[Sub[sub]]Section
+.fullSize {
+  display: flex;
+  flex-direction: column;
+  align-items: left;
+  gap: 0.5rem;
+  position: relative;
+  align-self: stretch;
+  textarea {
+    display: block;
+    width: 100%;
+  }
+}
