--- a/src/org/CreateOpportunity.module.scss
+++ b/src/org/CreateOpportunity.module.scss
@@ -1,5 +1,23 @@
+@use '../colors';
+
 .actions {
   display: flex;
   justify-content: space-evenly;
   gap: 3rem;
+
+  > .mainAction,
+  .cancelAction {
+    min-width: 200px;
+    border-radius: 4rem;
+  }
+
+  .mainAction {
+    background-color: colors.$opportunities;
+    color: white;
+  }
+
+  .cancelAction {
+    background-color: #d9d9d9;
+    color: rgb(35, 31, 32);
+  }
 }
