Implement Loading component and replace many loading indicators with it
Also Setup fullscreen flex page layout

--- a/src/index.scss
+++ b/src/index.scss
@@ -10,6 +10,11 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
+// this is here to make flex layout working
+#root {
+  height: 100%;
+}
+
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
