--- a/src/components/FormInputError.module.scss
+++ b/src/components/FormInputError.module.scss
@@ -15,6 +15,9 @@
     textarea {
       border-color: colors.$error;
     }
+    :global .quill {
+      border-color: colors.$error;
+    }
   }
 }
 
