Change and style Login-related components
according to Design

--- a/src/Form.module.scss
+++ b/src/Form.module.scss
@@ -11,6 +11,9 @@
   color: black;
   background: none;
   font-size: 0.875rem;
+  &:hover {
+    font-weight: bold;
+  }
 }
 
 .dangerActionButton {
