Style Organizer Home page
i.e. main four buttons and illustration

--- a/src/_colors.scss
+++ b/src/_colors.scss
@@ -3,3 +3,8 @@ $bronto: #00a340;
 $bronto-light: #beecd5;
 $opportunities: #3f7089;
 $opportunities-light: #d8e6ed;
+
+$create-event-main: $bronto;
+$close-event-main: #6dd6a3;
+$edit-event-main: #fa7c79;
+$opportunities-main: $opportunities-light;
