--- a/src/org/Home.module.scss
+++ b/src/org/Home.module.scss
@@ -1,11 +1,68 @@
-.mainMenu {
-  display: grid;
-  grid-template-columns: repeat(2, 120px);
-  grid-template-rows: repeat(2, 50px);
-  grid-row-gap: 2rem;
-  grid-column-gap: 1rem;
+@use '../colors';
 
-  a {
-    background-color: pink;
+.container {
+  height: 100%;
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: space-evenly;
+
+  .mainMenu {
+    display: grid;
+    grid-template-columns: repeat(2, 250px);
+    grid-auto-rows: 120px;
+    grid-row-gap: 2.5rem;
+    grid-column-gap: 1.5rem;
+
+    .menuItem {
+      background-color: pink;
+      border-radius: 1rem;
+      padding: 1rem;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      gap: 0.5rem;
+      // transition smoothly when hovering
+      transition: margin 0.2s;
+
+      &:hover {
+        // make button bigger on hover
+        margin: -0.3rem;
+      }
+
+      .title {
+        text-transform: uppercase;
+        color: white;
+        font-size: 1.5rem;
+        font-weight: 700;
+      }
+
+      // .detail {
+      //   // any need to style detail?
+      // }
+
+      &.createEvent {
+        background-color: colors.$create-event-main;
+      }
+      &.editEvent {
+        background-color: colors.$edit-event-main;
+      }
+      &.closeEvent {
+        background-color: colors.$close-event-main;
+      }
+      &.opportunities {
+        background-color: colors.$opportunities-main;
+        .title {
+          color: black;
+        }
+      }
+    }
+  }
+
+  .illustration {
+    // when the illustration gets cropped, the height will need to be different
+    // the illustration should be approximately the size of the mainMenu, or a little bit smaller
+    height: 500px;
   }
 }
