--- a/src/Form.module.scss
+++ b/src/Form.module.scss
@@ -26,6 +26,7 @@ input[type='text'],
 input[type='password'],
 input[type='number'],
 input[type='date'],
+input[type='time'],
 input[type='email'],
 input[type='tel'],
 input[type='url'],
