--- a/src/components/FormLayout.module.scss
+++ b/src/components/FormLayout.module.scss
@@ -17,6 +17,8 @@
   .header {
     margin-bottom: 1rem;
   }
+
+  margin: 1rem 0;
 }
 
 .header {
@@ -44,6 +46,20 @@
 .infoBox {
   background-color: #ebeff4;
   padding: 0.5rem 1rem;
+
+  p {
+    margin: 1rem 0;
+    &:first-child {
+      margin-top: 0;
+    }
+    &:last-child {
+      margin-bottom: 0;
+    }
+  }
+  ul {
+    margin: 1rem 0 1rem 2rem;
+    list-style-type: disc;
+  }
 }
 
 // this must be a direct child of a Form[Sub[sub]]Section
@@ -58,4 +74,12 @@
     display: block;
     width: 100%;
   }
+
+  margin: 1rem 0;
+}
+
+.inline {
+  display: flex;
+  align-items: center;
+  gap: 1rem;
 }
