--- a/src/components/Steps.module.scss
+++ b/src/components/Steps.module.scss
@@ -15,7 +15,10 @@ $step-button-line-height: 1.5rem;
 .navWrapper {
   padding: 0 1rem;
   display: flex;
+  flex-wrap: wrap;
   justify-content: space-between;
+  align-items: center;
+  gap: 1rem;
 }
 
 .actions {
