Add help to icon select of event group in event form

--- a/src/components/IconSelect.module.scss
+++ b/src/components/IconSelect.module.scss
@@ -37,6 +37,10 @@
   align-items: center;
   max-width: 14rem;
 
+  .title {
+    text-align: center;
+  }
+
   .detail {
     text-align: center;
     font-size: smaller;
