--- a/src/Header.module.scss
+++ b/src/Header.module.scss
@@ -1,13 +1,31 @@
 .container {
   display: flex;
-  gap: 1.5rem;
+  position: relative;
+  height: 6rem;
   padding: 0 1.5rem;
-  align-items: center;
+  align-items: stretch;
   .spacer {
     flex: auto;
   }
   .logo {
     height: 4rem;
     margin: 1rem;
+  }
+
+  button,
+  a {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    &:hover {
+      background-color: #f8f8f8;
+    }
+    padding: 0 1rem;
+    height: 100%;
+    border-radius: 0;
+  }
+
+  .userButton {
+    gap: 0.5rem;
   }
 }
