--- a/src/Header.module.scss
+++ b/src/Header.module.scss
@@ -1,15 +1,40 @@
+@use './media';
+
 .container {
   display: flex;
   position: relative;
-  height: 6rem;
-  padding: 0 1.5rem;
+  @include media.for-tablet-portrait-up {
+    padding: 0 1.5rem;
+    height: 6rem;
+  }
   align-items: stretch;
   .spacer {
     flex: auto;
   }
+
+  .logoWrapper {
+    flex: 0 0 auto;
+  }
+
+  .logoMini {
+    display: none;
+  }
   .logo {
     height: 4rem;
     margin: 1rem;
+  }
+
+  @include media.for-phone-only {
+    margin: 0 0.5rem;
+    .logoMini {
+      display: initial;
+      height: 3rem;
+      margin: 0;
+    }
+
+    .logo {
+      display: none;
+    }
   }
 
   button,
@@ -23,6 +48,10 @@
     padding: 0 1rem;
     height: 100%;
     border-radius: 0;
+
+    @include media.for-phone-only {
+      padding: 0.5rem;
+    }
   }
 
   .userButton {
