--- a/src/org/Home.module.scss
+++ b/src/org/Home.module.scss
@@ -1,4 +1,5 @@
 @use '../colors';
+@use '../media';
 
 .container {
   height: 100%;
@@ -7,12 +8,38 @@
   align-items: center;
   justify-content: space-evenly;
 
+  @include media.for-phone-only {
+    align-items: stretch;
+    width: 100%;
+  }
+
   .mainMenu {
     display: grid;
     grid-template-columns: repeat(2, 250px);
     grid-auto-rows: 120px;
     grid-row-gap: 2.5rem;
     grid-column-gap: 1.5rem;
+
+    // on mobile, show the buttons under each other
+    @include media.for-phone-only {
+      display: flex;
+      flex-direction: column;
+      gap: 1rem;
+      width: 100%;
+      margin: 1rem;
+
+      .menuItem {
+        height: 120px;
+        width: 100%;
+        &:hover {
+          margin: -0.3rem;
+          width: calc(100% + 0.6rem);
+          height: calc(120px + 0.6rem);
+        }
+
+        transition: width 0.2s, height 0.2s, margin 0.2s;
+      }
+    }
 
     .menuItem {
       background-color: pink;
@@ -23,14 +50,15 @@
       align-items: center;
       justify-content: center;
       gap: 0.5rem;
-      // transition smoothly when hovering
-      transition: margin 0.2s;
 
-      &:hover {
-        // make button bigger on hover
-        margin: -0.3rem;
+      @include media.for-tablet-portrait-up {
+        // transition smoothly when hovering
+        transition: margin 0.2s;
+        &:hover {
+          // make button bigger on hover
+          margin: -0.3rem;
+        }
       }
-
       .title {
         text-transform: uppercase;
         color: white;
@@ -64,5 +92,10 @@
     // when the illustration gets cropped, the height will need to be different
     // the illustration should be approximately the size of the mainMenu, or a little bit smaller
     height: 500px;
+
+    @include media.for-phone-only {
+      height: auto;
+      width: 100%;
+    }
   }
 }
