Improve various minor styling and formatting (#49)
* Fix bug: Canceling of new location led us out of opportunity form

* Add detailed description to IconSelect

* Format and style parts of event form

* Format and validate new location form in location select

* Change link text to password reset on login page

* Add help to icon select of event group in event form

* Add help to event participation cost in event form

* Format opportunity form

* Rename "close event" to "after event"

* Show footer with links, change displaying of header, show Loading when logging out

* Add user name and navigation to header, and style

* Add media queries for header and org home page

* Change favicon

--- a/src/components/IconSelect.module.scss
+++ b/src/components/IconSelect.module.scss
@@ -2,6 +2,7 @@
 
 .group {
   display: inline-flex;
+  flex-wrap: wrap;
   justify-content: center;
   gap: 5rem;
 }
@@ -34,6 +35,16 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  max-width: 14rem;
+
+  .title {
+    text-align: center;
+  }
+
+  .detail {
+    text-align: center;
+    font-size: smaller;
+  }
 }
 
 // set up color for opportunities
