--- a/src/Header.module.scss
+++ b/src/Header.module.scss
@@ -1,13 +1,60 @@
+@use './media';
+
 .container {
   display: flex;
-  gap: 1.5rem;
-  padding: 0 1.5rem;
-  align-items: center;
+  position: relative;
+  @include media.for-tablet-portrait-up {
+    padding: 0 1.5rem;
+    height: 6rem;
+  }
+  align-items: stretch;
   .spacer {
     flex: auto;
+  }
+
+  .logoWrapper {
+    flex: 0 0 auto;
+  }
+
+  .logoMini {
+    display: none;
   }
   .logo {
     height: 4rem;
     margin: 1rem;
+  }
+
+  @include media.for-phone-only {
+    margin: 0 0.5rem;
+    .logoMini {
+      display: initial;
+      height: 3rem;
+      margin: 0;
+    }
+
+    .logo {
+      display: none;
+    }
+  }
+
+  button,
+  a {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    &:hover {
+      background-color: #f8f8f8;
+    }
+    padding: 0 1rem;
+    height: 100%;
+    border-radius: 0;
+
+    @include media.for-phone-only {
+      padding: 0.5rem;
+    }
+  }
+
+  .userButton {
+    gap: 0.5rem;
   }
 }
