--- a/src/Layout.module.scss
+++ b/src/Layout.module.scss
@@ -1,4 +1,5 @@
 // inspired by https://stackoverflow.com/a/24979148
+@use 'media';
 
 html,
 body {
@@ -11,7 +12,7 @@ body {
   flex-direction: column;
   height: 100%;
 
-  .row {
+  & > .row {
     // border: 1px dotted grey; // for debugging
     &.header {
       flex: 0 1 auto;
@@ -24,9 +25,38 @@ body {
     &.content {
       flex: 1 1 auto;
     }
+
     &.footer {
       // flex: 0 1 40px; // this is how to make a component of fixed height
       flex: 0 1 auto;
+    }
+  }
+
+  &.page {
+    & > .row {
+      &.content {
+        @include media.for-tablet-portrait-up {
+          margin: 0 70px;
+        }
+
+        @include media.for-phone-only {
+          margin: 0 35px;
+        }
+      }
+    }
+  }
+}
+
+.box.page {
+  .noPageMargin {
+    @include media.for-tablet-portrait-up {
+      margin-left: -70px;
+      margin-right: -70px;
+    }
+
+    @include media.for-phone-only {
+      margin-left: -35px;
+      margin-right: -35px;
     }
   }
 }
