--- a/src/components/FormLayout.module.scss
+++ b/src/components/FormLayout.module.scss
@@ -1,10 +1,14 @@
 .section {
+  position: relative;
+  min-width: 100%;
   counter-reset: section;
   border: 1px solid lightgray;
-  margin: 1rem;
+  margin: 1rem 0;
   padding: 2rem;
   gap: 2rem;
   display: flex;
+  flex-grow: 0;
+  width: 0;
   flex-direction: column;
   align-items: center;
 }
@@ -22,6 +26,7 @@
 }
 
 .header {
+  text-align: center;
   &::before {
     content: counter(section);
     counter-increment: section;
@@ -80,6 +85,8 @@
 
 .inline {
   display: flex;
+  flex-wrap: wrap;
   align-items: center;
-  gap: 1rem;
+  row-gap: 0;
+  column-gap: 1rem;
 }
