--- a/src/components/FormLayout.module.scss
+++ b/src/components/FormLayout.module.scss
@@ -25,7 +25,7 @@
   flex-direction: column;
   align-items: center;
 
-  .header {
+  header {
     margin-bottom: 1rem;
   }
 
@@ -90,8 +90,6 @@
     display: block;
     width: 100%;
   }
-
-  margin: 1rem 0;
 }
 
 .inline {
