--- a/src/components/Help.module.scss
+++ b/src/components/Help.module.scss
@@ -11,3 +11,10 @@
   vertical-align: super;
   padding: 0.5rem;
 }
+
+.tooltip {
+  ul {
+    list-style-type: disc;
+    margin: 1rem 2rem;
+  }
+}
