--- a/src/components/FormLayout.module.scss
+++ b/src/components/FormLayout.module.scss
@@ -12,7 +12,7 @@
   @include media.for-phone-only {
     padding: 16px;
   }
-  gap: 2rem;
+  gap: 1rem;
   display: flex;
   flex-grow: 0;
   flex-direction: column;
@@ -26,6 +26,7 @@
   align-items: center;
 
   header {
+    margin-top: 1.5rem;
     margin-bottom: 1rem;
   }
 
@@ -34,6 +35,8 @@
 
 .header {
   text-align: center;
+
+  // number for numbered headers
   &::before {
     content: counter(section);
     counter-increment: section;
