--- a/src/Form.module.scss
+++ b/src/Form.module.scss
@@ -51,4 +51,9 @@ input[type='reset'],
   padding: 5px 2rem;
   cursor: pointer;
   text-align: center;
+
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  gap: 1rem;
 }
