Styl;e changes, font, table cells

--- a/src/components/Table.module.scss
+++ b/src/components/Table.module.scss
@@ -35,3 +35,10 @@
 .closed {
   color: black;
 }
+
+.cellWithButton > *:first-child {
+  display: block;
+  width: 30px;
+  margin-left: auto;
+  margin-right: auto;
+}
