--- a/src/index.scss
+++ b/src/index.scss
@@ -15,6 +15,18 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  // TODO: decide font
+  // font-family: 'Montserrat', sans-serif;
+  // font-family: 'Arimo', sans-serif;
+
+  // font-family: 'Libre Franklin', sans-serif;
+
+  // font-family: 'Montserrat', sans-serif;
+
+  // te na dole ok
+  font-family: 'Karla', sans-serif;
+
+  // font-family: 'Mulish', sans-serif;
 }
 
 // this is here to make flex layout working
