Improve event registration

--- a/src/components/Button.module.scss
+++ b/src/components/Button.module.scss
@@ -6,7 +6,7 @@
   cursor: pointer;
   text-align: center;
 
-  display: flex;
+  display: inline-flex;
   align-items: center;
   justify-content: center;
   gap: 0.5rem;
