--- a/src/components/FormLayout.module.scss
+++ b/src/components/FormLayout.module.scss
@@ -102,3 +102,17 @@
   row-gap: 0;
   column-gap: 1rem;
 }
+
+.actions {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 1rem;
+  margin: 1rem 0;
+
+  @include media.for-phone-only {
+    > * {
+      width: 100%;
+      justify-content: center;
+    }
+  }
+}
