Add showig application, style add aplication modal

--- a/src/_colors.scss
+++ b/src/_colors.scss
@@ -8,3 +8,5 @@ $create-event-main: $bronto;
 $close-event-main: #6dd6a3;
 $edit-event-main: #fa7c79;
 $opportunities-main: $opportunities-light;
+
+$edit: #fae572;
