--- a/src/Form.module.scss
+++ b/src/Form.module.scss
@@ -33,9 +33,9 @@ input[type='url'],
 input[type='datetime-local'],
 textarea,
 select {
-  border: 2px solid #ebeff4;
-  border-radius: 10px;
-  padding: 5px;
+  border: 1px solid #ebeff4;
+  border-radius: 6px;
+  padding: 2px 8px;
 
   &::placeholder {
     color: rgb(166, 166, 166);
