--- a/src/components/FormLayout.module.scss
+++ b/src/components/FormLayout.module.scss
@@ -28,6 +28,8 @@
   header {
     margin-top: 1.5rem;
     margin-bottom: 1rem;
+    font-size: 1.2rem;
+    font-weight: 500;
   }
 
   margin: 1rem 0;
@@ -44,8 +46,8 @@
     align-items: center;
     justify-content: center;
     border: 1px solid black;
-    height: 2rem;
-    width: 2rem;
+    height: 2.5rem;
+    width: 2.5rem;
     border-radius: 5rem;
     margin-right: 1.2rem;
   }
