--- a/src/components/NewApplicationModal.module.scss
+++ b/src/components/NewApplicationModal.module.scss
@@ -6,14 +6,36 @@
   height: 100%;
 }
 
-.modalContainer {
+.modal {
   background-color: white;
-  max-width: 600px;
-  width: 100%;
+  width: 800px;
   position: fixed;
-  top: 40%;
-  left: 50%;
-  transform: translate(-50%, -50%);
+  top: 40px;
+  left: calc(50% - 400px);
   display: flex;
   box-shadow: 0px 0px 18px 0px rgba($color: #000000, $alpha: 0.75);
+  max-height: calc(100vh - 40px);
+  overflow-y: auto;
+  .content {
+    width: 100%;
+
+    .modalTitleBox {
+      border-bottom: 1px solid rgb(233, 231, 231);
+      padding: 20px 40px;
+    }
+
+    .modalFormBox {
+      padding: 20px 40px 80px;
+
+      textarea {
+        width: 100%;
+        display: block;
+      }
+
+      h3 {
+        font-size: 20px;
+        font-weight: 500;
+      }
+    }
+  }
 }
