--- a/src/components/Table.module.scss
+++ b/src/components/Table.module.scss
@@ -38,7 +38,5 @@
 
 .cellWithButton > *:first-child {
   display: block;
-  width: 30px;
-  margin-left: auto;
-  margin-right: auto;
+  margin: auto;
 }
