--- a/src/org/ViewEvent.module.scss
+++ b/src/org/ViewEvent.module.scss
@@ -27,6 +27,26 @@
     object-fit: cover;
   }
 
+  .imageMissing {
+    height: 16rem;
+    width: 26rem;
+    max-width: 100%;
+    display: flex;
+    flex-direction: column;
+    background-color: colors.$bronto;
+    align-items: center;
+    justify-content: center;
+    gap: 1rem;
+    color: white;
+    > a {
+      color: black;
+      background-color: colors.$bronto-light;
+      &:hover {
+        background-color: white;
+      }
+    }
+  }
+
   .data {
     margin: 1rem 0;
     padding: 1rem;
@@ -36,15 +56,12 @@
   }
 
   .infoBoxDetail {
+    overflow: hidden;
     width: 26rem;
     max-width: 100%;
     .imageWrapper {
       position: relative;
       border-bottom: 2px solid colors.$bronto;
-      .image {
-        border-top-left-radius: 32px;
-        border-top-right-radius: 32px;
-      }
 
       .tags {
         display: flex;
