--- a/src/components/Button.module.scss
+++ b/src/components/Button.module.scss
@@ -1,7 +1,8 @@
 @use '../colors';
 
 .button {
-  border-radius: 100px; // completely rounded
+  // border-radius: 100px; // completely rounded
+  border-radius: 12px;
   padding: 4px 32px;
   cursor: pointer;
   text-align: center;
@@ -17,6 +18,17 @@
   background-color: colors.$bronto;
   border: 2px solid colors.$bronto;
   font-size: 1rem;
+}
+
+.plain {
+  color: black;
+  background-color: transparent;
+  border: 1px solid colors.$gray-400;
+  font-size: 1rem;
+
+  &:hover {
+    background-color: rgba(colors.$bronto, 0.18);
+  }
 }
 
 :global .opportunitySection {
