--- a/src/components/NewApplicationModal.module.scss
+++ b/src/components/NewApplicationModal.module.scss
@@ -1,3 +1,5 @@
+@use '../colors';
+
 .overlay {
   background-color: rgba($color: #000000, $alpha: 0.5);
   position: fixed;
@@ -8,7 +10,7 @@
 
 .modal {
   background-color: white;
-  width: 800px;
+  width: 1000px;
   position: fixed;
   top: 40px;
   left: calc(50% - 400px);
@@ -27,6 +29,10 @@
     .modalFormBox {
       padding: 20px 40px 80px;
 
+      .infoBox {
+        padding: 20px;
+        background-color: colors.$gray-100;
+      }
       textarea {
         width: 100%;
         display: block;
@@ -37,5 +43,43 @@
         font-weight: 500;
       }
     }
+  }
+}
+
+.usersList {
+  margin-top: 20px;
+}
+
+table {
+  tbody {
+    display: table;
+    width: 100%;
+  }
+  td {
+    padding: 0.5rem;
+    white-space: nowrap;
+  }
+  display: block;
+  margin: 0 auto;
+  overflow-x: auto;
+  white-space: nowrap;
+  width: 100%;
+
+  .displayName {
+    max-width: 350px;
+    overflow-x: auto;
+  }
+
+  .myUsers {
+    background-color: colors.$bronto-super-light;
+  }
+  .otherUsers {
+    background-color: colors.$gray-100;
+  }
+  .birthsdayButton {
+    display: inline;
+  }
+  .birthsdayInput {
+    margin-right: 20px;
   }
 }
