Add handling new participants

--- a/src/_colors.scss
+++ b/src/_colors.scss
@@ -1,6 +1,10 @@
 $error: #e72424;
+$error-light: #f8d5d4;
+
 $bronto: #00a340;
 $bronto-light: #beecd5;
+$bronto-super-light: #dcf5e8;
+
 $opportunities: #3f7089;
 $opportunities-light: #d8e6ed;
 
