--- a/src/_colors.scss
+++ b/src/_colors.scss
@@ -14,3 +14,9 @@ $edit-event-main: #fa7c79;
 $opportunities-main: $opportunities-light;
 
 $edit: #fae572;
+
+$gray-100: rgb(244, 248, 250);
+$gray-200: rgb(226, 233, 238);
+$gray-300: rgb(152, 160, 163);
+$gray-400: rgb(102, 112, 116);
+$gray-500: rgb(55, 58, 63);
