Po akci iteration IV (#74)
* Clean up the code, rebase, add user to participants

* Address review comments

* Add showig application, style add aplication modal

* Add handling new participants

* Fix styles bugs

Co-authored-by: Talita Andrzejewska <dzikilubiabloto@protonmail.com>

--- a/src/_colors.scss
+++ b/src/_colors.scss
@@ -1,6 +1,10 @@
 $error: #e72424;
+$error-light: #f8d5d4;
+
 $bronto: #00a340;
 $bronto-light: #beecd5;
+$bronto-super-light: #dcf5e8;
+
 $opportunities: #3f7089;
 $opportunities-light: #d8e6ed;
 
@@ -8,3 +12,11 @@ $create-event-main: $bronto;
 $close-event-main: #6dd6a3;
 $edit-event-main: #fa7c79;
 $opportunities-main: $opportunities-light;
+
+$edit: #fae572;
+
+$gray-100: rgb(244, 248, 250);
+$gray-200: rgb(226, 233, 238);
+$gray-300: rgb(152, 160, 163);
+$gray-400: rgb(102, 112, 116);
+$gray-500: rgb(55, 58, 63);
