--- a/src/org/EventForm/steps/ParticipantsStep.module.scss
+++ b/src/org/EventForm/steps/ParticipantsStep.module.scss
@@ -1,3 +1,5 @@
+@use '../../../colors';
+
 h2 {
   font-family: Arial, Helvetica, sans-serif;
   font-weight: 600;
@@ -20,10 +22,15 @@ h2 {
   }
 
   tbody {
+    .highlightedRow {
+      background-color: colors.$gray-200;
+    }
     td {
+      cursor: pointer;
       text-align: center;
       &:nth-child(1),
-      &:nth-child(2) {
+      &:nth-child(2),
+      &:nth-child(3) {
         border-right: 1px solid #d9d9d9;
       }
       &:nth-child(1) {
@@ -34,9 +41,10 @@ h2 {
       }
       &:last-child {
         width: 50px;
+        border-right: 0px solid #d9d9d9;
       }
       &:hover {
-        background-color: #f8f8fa;
+        background-color: colors.$gray-200;
       }
     }
   }
@@ -50,6 +58,45 @@ h2 {
       text-align: center;
     }
   }
+}
+
+.disabledIconContainer {
+  svg {
+    path {
+      fill: colors.$gray-200;
+    }
+  }
+  cursor: not-allowed !important;
+}
+
+.binIconContainer {
+  width: 14px;
+  path {
+    fill: colors.$edit-event-main;
+  }
+}
+.addUserIconContainer {
+  width: 20px;
+  path {
+    fill: colors.$close-event-main;
+  }
+}
+
+.editUserIconContainer {
+  width: 20px;
+  path {
+    fill: colors.$edit;
+  }
+}
+
+.applicationWithParticipant {
+  font-weight: 600;
+  color: colors.$gray-300;
+}
+
+.applicationAddedTag {
+  color: colors.$bronto;
+  font-weight: 600;
 }
 
 .participantsContainer {
@@ -94,6 +141,7 @@ h2 {
           border-radius: 4px;
           margin-right: 8px;
           background-color: none;
+          cursor: pointer;
         }
 
         button:hover {
@@ -101,5 +149,43 @@ h2 {
         }
       }
     }
+
+    .emptyListBox {
+      width: 100%;
+      height: 300px;
+      border: solid 2px #f8f8fa;
+      color: #737373;
+      img {
+        width: 80px;
+        margin: 80px auto 0;
+      }
+      div {
+        margin: 0px auto 70px;
+        width: 210px;
+      }
+    }
   }
+}
+
+.disabledButton {
+  border: 1px solid #f8f8fa !important;
+  cursor: not-allowed !important;
+  color: #737373 !important;
+  &:hover {
+    background-color: white !important;
+  }
+}
+
+.showUserApplicationNameBox {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  .addUserButtons {
+    display: flex;
+    flex-direction: row;
+  }
+}
+
+.addedUserBlock {
+  margin-top: 40px;
 }
