--- a/src/components/NewApplicationModal.module.scss
+++ b/src/components/NewApplicationModal.module.scss
@@ -1,3 +1,5 @@
+@use '../colors';
+
 .overlay {
   background-color: rgba($color: #000000, $alpha: 0.5);
   position: fixed;
@@ -6,14 +8,93 @@
   height: 100%;
 }
 
-.modalContainer {
+.modal {
   background-color: white;
-  max-width: 600px;
-  width: 100%;
+  width: 1000px;
   position: fixed;
-  top: 40%;
-  left: 50%;
-  transform: translate(-50%, -50%);
+  top: 40px;
+  left: calc(50% - 400px);
   display: flex;
   box-shadow: 0px 0px 18px 0px rgba($color: #000000, $alpha: 0.75);
+  max-height: calc(100vh - 40px);
+  overflow-y: auto;
+  .content {
+    width: 100%;
+
+    .modalTitleBox {
+      border-bottom: 1px solid rgb(233, 231, 231);
+      padding: 20px 40px;
+    }
+
+    .modalFormBox {
+      padding: 20px 40px 80px;
+
+      .infoBox {
+        padding: 20px;
+        background-color: colors.$gray-100;
+      }
+
+      textarea {
+        width: 100%;
+        display: block;
+      }
+
+      h3 {
+        font-size: 24px;
+        font-weight: 700;
+      }
+      h4 {
+        font-size: 20px;
+        font-weight: 600;
+      }
+    }
+  }
+}
+
+.usersList {
+  margin-top: 20px;
+}
+
+table {
+  tbody {
+    display: table;
+    width: 100%;
+  }
+  td {
+    padding: 0.5rem;
+    white-space: nowrap;
+  }
+  display: block;
+  margin: 0 auto;
+  overflow-x: auto;
+  white-space: nowrap;
+  width: 100%;
+
+  .displayName {
+    max-width: 350px;
+    overflow-x: auto;
+  }
+
+  .myUsers {
+    background-color: colors.$bronto-super-light;
+  }
+  .otherUsers {
+    background-color: colors.$gray-100;
+  }
+  .birthsdayButton {
+    display: inline;
+  }
+  .birthsdayInput {
+    margin-right: 20px;
+  }
+}
+
+.showUserApplicationNameBox {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  .addUserButtons {
+    display: flex;
+    flex-direction: row;
+  }
 }
