Handle error on users date added

--- a/src/components/NewApplicationModal.module.scss
+++ b/src/components/NewApplicationModal.module.scss
@@ -98,3 +98,11 @@ table {
     flex-direction: row;
   }
 }
+
+.errorBirthdate {
+  background-color: colors.$error-light !important;
+}
+
+.successBirthdate {
+  background-color: colors.$bronto-super-light !important;
+}
