Select unknown user by birthdate

--- a/src/components/FormLayout.module.scss
+++ b/src/components/FormLayout.module.scss
@@ -97,6 +97,15 @@
   }
 }
 
+.clearFullSize {
+  textarea,
+  input,
+  select {
+    display: initial;
+    width: initial;
+  }
+}
+
 .inline {
   display: flex;
   flex-wrap: wrap;
