Separate Modal component, add close button

--- a/src/_colors.scss
+++ b/src/_colors.scss
@@ -20,3 +20,5 @@ $gray-200: rgb(226, 233, 238);
 $gray-300: rgb(152, 160, 163);
 $gray-400: rgb(102, 112, 116);
 $gray-500: rgb(55, 58, 63);
+
+$black: #000000;
