--- a/src/components/SelectLocation/SelectLocation.module.scss
+++ b/src/components/SelectLocation/SelectLocation.module.scss
@@ -1,3 +1,5 @@
+@use 'styles/media';
+
 .aboveMap {
   z-index: 1000;
 }
@@ -9,4 +11,53 @@
 .container {
   width: 100%;
   position: relative;
+}
+
+.wrapper {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  align-items: center;
+}
+
+.mapContainer {
+  width: 350px;
+  @include media.for-phone-only {
+    width: 100%;
+  }
+  height: 250px;
+}
+
+.mainContentContainer {
+  width: 350px;
+  @include media.for-phone-only {
+    width: 100%;
+  }
+}
+
+.mapWrapper {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  .legend {
+    width: 200px;
+    margin-bottom: 0.5rem;
+    width: 200px;
+    display: flex;
+    align-items: right;
+    flex-direction: column;
+    gap: 0.25rem;
+    .legendItem {
+      font-size: 0.8rem;
+      display: inline-flex;
+      gap: 0.5rem;
+      align-items: center;
+    }
+  }
+  .map {
+  }
+  .mapSpacer {
+    width: 200px;
+  }
 }
