Move generic styles to /styles folder

--- a/src/components/ListHeader.module.scss
+++ b/src/components/ListHeader.module.scss
@@ -1,5 +1,5 @@
-@use '../colors';
-@use '../media';
+@use 'styles/colors';
+@use 'styles/media';
 
 // we use this to style content under this header
 // to set similar margins as header
