Move pages to /pages/ and layout components to /layout/

--- a/src/index.scss
+++ b/src/index.scss
@@ -1,5 +1,5 @@
 @import-normalize;
-@import './preflight.css';
+@import 'styles/preflight.css';
 // fix some production style inconsistencies
 button,
 fieldset,
