Add location search to map with OpenStreetMap nominatim
https://nominatim.openstreetmap.org

--- a/src/components/Map/Map.module.scss
+++ b/src/components/Map/Map.module.scss
@@ -7,3 +7,12 @@
   }
   height: 250px;
 }
+
+.searchForm {
+  fieldset {
+    display: flex;
+    input[type='text'] {
+      flex: auto;
+    }
+  }
+}
