--- a/src/components/FormLayout/FormLayout.module.scss
+++ b/src/components/FormLayout/FormLayout.module.scss
@@ -114,16 +114,20 @@
   column-gap: 1rem;
 }
 
-.actions {
+@mixin actions {
   display: flex;
   flex-wrap: wrap;
   gap: 1rem;
-  margin: 1rem 0;
 
   @include media.for-phone-only {
-    > * {
-      width: 100%;
-      justify-content: center;
-    }
+    // flex-direction: column-reverse;
+    flex-direction: column;
+    align-items: stretch;
+    width: 100%;
   }
+}
+
+.actions {
+  @include actions;
+  margin: 1rem 0;
 }
