--- a/src/components/Steps/Steps.module.scss
+++ b/src/components/Steps/Steps.module.scss
@@ -1,4 +1,5 @@
 @use 'styles/colors';
+@use 'components/FormLayout/FormLayout.module' as formLayout;
 
 .isHidden {
   display: none;
@@ -13,7 +14,6 @@ $step-button-horizontal-gap: 1rem;
 $step-button-line-height: 1.5rem;
 
 .navWrapper {
-  padding: 0 1rem;
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
@@ -22,8 +22,7 @@ $step-button-line-height: 1.5rem;
 }
 
 .actions {
-  display: flex;
-  gap: $step-button-horizontal-gap;
+  @include formLayout.actions;
 }
 
 .navigation {
