--- a/src/components/StyledModal/StyledModal.module.scss
+++ b/src/components/StyledModal/StyledModal.module.scss
@@ -3,9 +3,12 @@
 .modal {
   background-color: white;
   width: 1000px;
+  max-width: 90%;
   position: fixed;
   top: 40px;
-  left: calc(50% - 400px);
+  left: 50%;
+  transform: translate(-50%, 0);
+  margin: 0 auto;
   display: flex;
   box-shadow: 0px 0px 18px 0px rgba($color: #000000, $alpha: 0.75);
   max-height: calc(100vh - 40px);
