--- a/src/styles/menu.scss
+++ b/src/styles/menu.scss
@@ -12,7 +12,7 @@
       width: 100%;
       display: flex;
       align-items: center;
-      justify-content: center;
+      justify-content: left;
       text-align: center;
     }
   }
