Add open state to menu button

--- a/src/layout/Header.module.scss
+++ b/src/layout/Header.module.scss
@@ -66,6 +66,9 @@
     font-weight: 600;
   }
 
+  .menuButtonOpen {
+    color: colors.$bronto;
+  }
   .menuItemReadonly {
     color: black;
     font-weight: 400;
