Add titles to top of pages, and to browser window
Also do various formatting

--- a/src/user/pages/ViewProfile/ViewProfile.module.scss
+++ b/src/user/pages/ViewProfile/ViewProfile.module.scss
@@ -1,10 +1,25 @@
-table.horizontalTable {
-  th {
-    padding-right: 1rem;
-    text-align: right;
+.pageContainer {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
+  table.horizontalTable {
+    th {
+      padding-right: 1rem;
+      text-align: right;
+    }
+    th,
+    td {
+      vertical-align: top;
+    }
   }
-  th,
-  td {
-    vertical-align: top;
+
+  // copy-pasted from ViewEvent.module.scss
+  .data {
+    margin: 1rem 0;
+    padding: 1rem;
+    max-width: 100%;
+    overflow: scroll;
+    background-color: #eee;
   }
 }
