--- a/src/org/pages/ViewEvent/ViewEvent.module.scss
+++ b/src/org/pages/ViewEvent/ViewEvent.module.scss
@@ -2,6 +2,9 @@
 @use 'styles/media';
 
 .wrapper {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   .name {
     font-size: 2rem;
     font-weight: bold;
