--- a/src/layout/Header.module.scss
+++ b/src/layout/Header.module.scss
@@ -1,6 +1,11 @@
 @use 'styles/media';
 @use 'styles/colors';
 
+@mixin link-highlight {
+  color: colors.$bronto;
+  transition: color 0.2s ease;
+}
+
 .container {
   display: flex;
   position: relative;
@@ -37,6 +42,10 @@
     .logo {
       display: none;
     }
+
+    .profileName {
+      display: none;
+    }
   }
 
   button,
@@ -47,34 +56,43 @@
     padding: 0 1rem;
     height: 100%;
     border-radius: 0;
-    &:hover {
-      color: colors.$bronto;
-      transition: color 0.2s ease;
-    }
-
     @include media.for-phone-only {
       padding: 0.5rem;
     }
   }
 
-  .userButton {
+  .menuButton {
     gap: 0.5rem;
-    font-weight: 600;
-  }
-
-  .roleButton {
-    font-weight: 600;
+    font-weight: 400;
+    &:hover {
+      @include link-highlight;
+    }
   }
 
   .menuButtonOpen {
     color: colors.$bronto;
   }
-  .menuItemReadonly {
+
+  .menuItemCustom {
+    color: black;
+    // stops background flickering on hover
+    background-color: white !important;
+    &:hover {
+      @include link-highlight;
+    }
+
+    &:hover {
+      // stops default background color on hover
+      background-color: white !important;
+    }
+  }
+
+  .menuItemProfileData {
     color: black;
     font-weight: 400;
-    &:hover {
-      background-color: white;
-    }
+    padding: 0;
+    // stops background flickering on hover
+    background-color: white !important;
     .menuUserInfo {
       flex-direction: column;
       .menuEmail {
@@ -85,19 +103,15 @@
         padding: 0;
         justify-content: center;
       }
-    }
-  }
 
-  .menuCustom {
-    font-weight: 600;
-  }
-  .menuItemCustom {
-    color: black;
-    font-weight: 400;
-    background-color: white !important;
-
-    &:hover {
-      background-color: white !important;
+      &:hover {
+        .menuName {
+          @include link-highlight;
+        }
+        .menuEmail {
+          color: black !important;
+        }
+      }
     }
   }
 }
