Last styles for menu, light up new participant (#99)
* Add adding participant highlight

* Style header, colors, hover

Co-authored-by: Talita Andrzejewska <dzikilubiabloto@protonmail.com>

--- a/src/layout/Header.module.scss
+++ b/src/layout/Header.module.scss
@@ -1,6 +1,11 @@
 @use 'styles/media';
 @use 'styles/colors';
 
+@mixin link-highlight {
+  color: colors.$bronto;
+  transition: color 0.2s ease;
+}
+
 .container {
   display: flex;
   position: relative;
@@ -18,24 +23,36 @@
     flex: 0 0 auto;
   }
 
+  margin: 0 0.5rem;
   .logoMini {
+    display: initial;
+    height: 3rem;
+    margin: 0;
+  }
+
+  .logo {
     display: none;
   }
-  .logo {
-    height: 4rem;
-    margin: 1rem;
+
+  .profileName {
+    display: none;
   }
 
-  @include media.for-phone-only {
-    margin: 0 0.5rem;
-    .logoMini {
-      display: initial;
-      height: 3rem;
-      margin: 0;
+  @include media.for-tablet-portrait-up {
+    margin: 0;
+    .profileName {
+      display: block;
     }
+  }
 
-    .logo {
+  @include media.for-tablet-landscape-up {
+    .logoMini {
       display: none;
+    }
+    .logo {
+      display: block;
+      height: 4rem;
+      margin: 1rem;
     }
   }
 
@@ -47,34 +64,43 @@
     padding: 0 1rem;
     height: 100%;
     border-radius: 0;
-    &:hover {
-      color: colors.$bronto;
-      transition: color 0.2s ease;
-    }
-
     @include media.for-phone-only {
       padding: 0.5rem;
     }
   }
 
-  .userButton {
+  .menuButton {
     gap: 0.5rem;
-    font-weight: 600;
-  }
-
-  .roleButton {
-    font-weight: 600;
+    font-weight: 400;
+    &:hover {
+      @include link-highlight;
+    }
   }
 
   .menuButtonOpen {
     color: colors.$bronto;
   }
-  .menuItemReadonly {
+
+  .menuItemCustom {
+    color: black;
+    // stops background flickering on hover
+    background-color: white !important;
+    &:hover {
+      @include link-highlight;
+    }
+
+    &:hover {
+      // stops default background color on hover
+      background-color: white !important;
+    }
+  }
+
+  .menuItemProfileData {
     color: black;
     font-weight: 400;
-    &:hover {
-      background-color: white;
-    }
+    padding: 0;
+    // stops background flickering on hover
+    background-color: white !important;
     .menuUserInfo {
       flex-direction: column;
       .menuEmail {
@@ -85,19 +111,15 @@
         padding: 0;
         justify-content: center;
       }
-    }
-  }
 
-  .menuCustom {
-    font-weight: 600;
-  }
-  .menuItemCustom {
-    color: black;
-    font-weight: 400;
-    background-color: white !important;
-
-    &:hover {
-      background-color: white !important;
+      &:hover {
+        .menuName {
+          @include link-highlight;
+        }
+        .menuEmail {
+          color: black !important;
+        }
+      }
     }
   }
 }
