Implement canceling and restoring of event
It's possible to cancel and restore event from
- view event page
- organized events list

--- a/src/components/Table.module.scss
+++ b/src/components/Table.module.scss
@@ -36,6 +36,10 @@
   color: black;
 }
 
+.canceled {
+  color: colors.$error;
+}
+
 .cellWithButton > *:first-child {
   display: block;
   margin: auto;
