Add help to invitation texts

--- a/src/components/FormLayout/FormLayout.module.scss
+++ b/src/components/FormLayout/FormLayout.module.scss
@@ -92,7 +92,7 @@
 .fullSize {
   display: flex;
   flex-direction: column;
-  align-items: left;
+  align-items: stretch;
   gap: 0.5rem;
   position: relative;
   align-self: stretch;
