--- a/src/components/FormLayout/FormLayout.module.scss
+++ b/src/components/FormLayout/FormLayout.module.scss
@@ -1,6 +1,6 @@
 @use 'styles/media';
 
-.section {
+.sectionGroup {
   position: relative;
   // these next two lines make sure flex cross axis won't stretch
   width: 0;
@@ -19,11 +19,13 @@
   align-items: center;
 }
 
+.section,
 .subsection {
   width: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
+  margin: 1rem 0;
 
   header {
     margin-top: 1.5rem;
@@ -31,11 +33,18 @@
     font-size: 1.2rem;
     font-weight: 500;
   }
-
-  margin: 1rem 0;
 }
 
-.header {
+.subsection {
+  .subsection {
+    header {
+      font-size: 1.1rem;
+      font-weight: 400;
+    }
+  }
+}
+
+.numberedHeader {
   text-align: center;
 
   // number for numbered headers
@@ -83,7 +92,7 @@
 .fullSize {
   display: flex;
   flex-direction: column;
-  align-items: left;
+  align-items: stretch;
   gap: 0.5rem;
   position: relative;
   align-self: stretch;
