Change texts on main page, remove active events tab from events list

--- a/src/components/Home/Home.module.scss
+++ b/src/components/Home/Home.module.scss
@@ -48,6 +48,7 @@
       flex-direction: column;
       align-items: center;
       justify-content: center;
+      text-align: center;
       gap: 0.5rem;
 
       @include media.for-tablet-portrait-up {
